# libtorch-wasm

./: CMakeLists.txt  Dockerfile  README.md  export-model.py  pytorch_emscripten_fix.patch
.github/workflows/: cmake-single-platform.yml
include/: labels.h
native/: CMakeLists.txt  Dockerfile
src/: main.cpp
